force-app/main/default/objects/loan__Bank_Account__c/loan__Bank_Account__c.object-meta.xml
<CustomObject>
    <label>Bank Account</label>
    <nameField>
        <displayFormat>BA-{00000}</displayFormat>
        <label>Bank Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>