force-app/main/default/objects/loan__Bank_Account__c/fields/Account_Change__c.field-meta.xml
<CustomField>
    <fullName>Account_Change__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Change</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bank Accounts (Account Change)</relationshipLabel>
    <relationshipName>Bank_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>