force-app/main/default/objects/loan__Bank_Account__c/fields/Bank_Account_Name_Change__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Name_Change__c</fullName>
    <label>Bank Account Name Change</label>
    <length>255</length>
    <type>Text</type>
</CustomField>