force-app/main/default/objects/loan__Bank_Account__c/fields/Bank_Account_Number_Change__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number_Change__c</fullName>
    <label>Bank Account Number Change</label>
    <length>50</length>
    <type>Text</type>
</CustomField>