force-app/main/default/objects/loan__Bank_Account__c/fields/BSB_Number__c.field-meta.xml
<CustomField>
    <fullName>BSB_Number__c</fullName>
    <label>BSB Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>