force-app/main/default/objects/loan__Bank_Account__c/fields/BSB_Number_Change__c.field-meta.xml
<CustomField>
    <fullName>BSB_Number_Change__c</fullName>
    <label>BSB Number Change</label>
    <length>255</length>
    <type>Text</type>
</CustomField>