force-app/main/default/objects/loan__Bank_Account__c/fields/Created_After_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Created_After_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created After Conversion</label>
    <type>Checkbox</type>
</CustomField>