force-app/main/default/objects/loan__Bank_Account__c/fields/Field_Update__c.field-meta.xml
<CustomField>
    <fullName>Field_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field Update</label>
    <type>Checkbox</type>
</CustomField>