force-app/main/default/objects/loan__Bank_Account__c/fields/loan__Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>loan__Routing_Number__c</fullName>
    <inlineHelpText>This is a nine digit number used to identify the financial institution in a transaction.</inlineHelpText>
    <label>Routing Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>