force-app/main/default/objects/loan__Bank_Account__c/fields/Signatures_confirmed__c.field-meta.xml
<CustomField>
    <fullName>Signatures_confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To confirm signatures have been checked for the bank account change</description>
    <label>Signatures confirmed</label>
    <type>Checkbox</type>
</CustomField>