force-app/main/default/objects/loan__Bank_Account__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Bank Accounts</relationshipLabel>
    <relationshipName>Bank_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>