force-app/main/default/objects/loan__Bank_Account__c/recordTypes/Bank_Account_Record.recordType-meta.xml
<RecordType>
    <fullName>Bank_Account_Record</fullName>
    <active>true</active>
    <label>Bank Account Record</label>
</RecordType>