force-app/main/default/objects/loan__Bank_Account__c/recordTypes/Lock_Bank_Account.recordType-meta.xml
<RecordType>
    <fullName>Lock_Bank_Account</fullName>
    <active>true</active>
    <label>Lock Bank Account</label>
</RecordType>