force-app/main/default/objects/loan__Bank_Account__c/recordTypes/New_Bank_Account.recordType-meta.xml
<RecordType>
    <fullName>New_Bank_Account</fullName>
    <active>true</active>
    <label>New Bank Account</label>
</RecordType>