force-app/main/default/objects/loan__Bank_Account__c/validationRules/Bank_Account_Name_Change_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_Account_Name_Change_Length</fullName>
    <active>true</active>
    <errorConditionFormula>OR(LEN( Bank_Account_Name_Change__c ) &gt; 32, ISBLANK(Bank_Account_Name_Change__c ))</errorConditionFormula>
    <errorMessage>Bank Account Name Change length cannot exceed 32 and cannot be blank.</errorMessage>
</ValidationRule>