force-app/main/default/objects/loan__Bank_Account__c/validationRules/Bank_Account_Number_Change_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_Account_Number_Change_Length</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(  Bank_Account_Number_Change__c) ||  LEN(Bank_Account_Number_Change__c)&gt;9 ||
NOT(REGEX( Bank_Account_Number_Change__c ,&quot;([0-9]){0,9}&quot;))</errorConditionFormula>
    <errorMessage>Bank Account Number Change can only contain numbers and length cannot be greater than 9</errorMessage>
</ValidationRule>