force-app/main/default/objects/loan__Bank_Account__c/validationRules/Bank_Account_Number_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_Account_Number_Length</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(REGEX( loan__Bank_Account_Number__c ,&quot;([0-9]){0,9}&quot;)), NOT(ISBLANK( loan__Bank_Account_Number__c)))</errorConditionFormula>
    <errorMessage>Bank Account Number can only contain numbers and length cannot be greater than 9</errorMessage>
</ValidationRule>