force-app/main/default/objects/loan__Bank_Account__c/validationRules/Bank_Account_Number_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_Account_Number_Update</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Field_Update__c == False  &amp;&amp;  
 (ISCHANGED( loan__Bank_Account_Number__c ) ||
 ISCHANGED(loan__Bank_Name__c)) 
,True,False)</errorConditionFormula>
    <errorMessage>Bank Account Number and Bank Name Are Not Editable</errorMessage>
</ValidationRule>