force-app/main/default/objects/loan__Bank_Account__c/validationRules/Length_of_BSB_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Length_of_BSB_Number</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(REGEX(BSB_Number__c ,&quot;([0-9]){6}&quot;)), NOT(ISBLANK( BSB_Number__c)))</errorConditionFormula>
    <errorDisplayField>BSB_Number__c</errorDisplayField>
    <errorMessage>BSB Number Should Consists of Six Digits.</errorMessage>
</ValidationRule>