force-app/main/default/objects/loan__Bank_Account__c/validationRules/Length_of_BSB_Number_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Length_of_BSB_Number_Change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(REGEX( BSB_Number_Change__c  ,&quot;([0-9]){6}&quot;)), NOT(ISBLANK( BSB_Number_Change__c)))</errorConditionFormula>
    <errorMessage>BSB Number Change Should Consists of Six Digits.</errorMessage>
</ValidationRule>