force-app/main/default/objects/loan__Bank_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>loan__Account_Type__c</columns>
    <columns>loan__Account__c</columns>
    <columns>Bank_Account_Name__c</columns>
    <columns>loan__Bank_Name__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>